# langformer

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  STYLE.md  langformer_spec.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: ci.yml  ruff.yml
assets/: langformer_diagram.mermaid
configs/: default_config.yaml  dspy_py2rb.yaml  kernel_agent_delegate.yaml  simple_py2rb.yaml
configs/barebones/: python_to_ruby.yaml  python_to_rust.yaml
examples/: __init__.py
examples/barebones/: python_to_rust.py
examples/barebones/transpile_with_dspy/: __init__.py  run.py
examples/dspy_py2rb_transpiler/: __init__.py  agent.py  dspy_components.py  oracle.py  run.py
examples/dspy_py2rb_transpiler/inputs/: report_module.py
examples/dspy_py2rb_transpiler/outputs/: report_module.rb
examples/dspy_py2rb_transpiler/tests/: report_module_test.rb
examples/kernel_agent_delegate/: __init__.py  delegate.py  oracle.py  planner.py
examples/simple_py2rb_transpiler/: __init__.py  oracle.py  run.py
examples/tests/: test_dspy_py2rb.py  test_kernel_agent_delegate.py  test_kernel_agent_planner.py  test_simple_py2rb.py  test_transpile_with_dspy.py
langformer/: __init__.py  artifacts.py  cli.py  configuration.py  constants.py  exceptions.py  orchestrator.py  types.py
langformer/agents/: __init__.py  analyzer.py  base.py  transpiler.py  verifier.py
langformer/languages/: __init__.py  base.py  python.py  ruby.py  rust.py
langformer/llm/: utils.py
langformer/llm/providers/: __init__.py  (+6 more)
langformer/logging/: __init__.py  event_adapter.py  utils.py
langformer/orchestration/: __init__.py  context_builder.py  target_integrator.py
langformer/preprocessing/: __init__.py  delegates.py  planners.py
langformer/prompting/: __init__.py  registry.py  types.py
langformer/prompts/: manager.py
langformer/runtime/: __init__.py  config.py  dedup.py  parallel.py  paths.py
langformer/state/: manager.py
langformer/verification/: __init__.py  base.py  config.py  factory.py  oracles.py  strategies.py
langformer/worker/: __init__.py  manager.py  payload.py  transpile_worker.py
tests/: conftest.py  sample_plugin.py  simple_py2rb_stub.py  test_analyzer.py  test_artifacts.py  test_basic.py  test_cli.py  test_configuration.py  test_custom_components.py  test_delegates.py  test_integration.py  test_languages.py  test_llm_providers.py  test_prompt_layer.py  test_prompts.py  test_run_session.py  test_runner.py  test_runner_manager.py  test_runtime_integration.py  test_runtime_paths.py  test_transpiler.py  test_verification.py  test_worker.py
(+20 files in other folders)
